--- a/src/index.pug
+++ b/src/index.pug
@@ -68,7 +68,7 @@ html(lang='en')
             li._nav-item
               a(href='#_contact') Contact
             li._nav-item
-              a(href=`https://docs.${textCase.lowerCase(_PROJECT)}`) Docs
+              a(href=`https://docs.${textCase.lowerCase(_PROJECT)}.org`) Docs
           div._nav-buttons
             button#_theme_switch_button(type='button')
               i#_dark_theme_icon(class='inline fas fa-moon')
