--- a/src/index.pug
+++ b/src/index.pug
@@ -66,9 +66,9 @@ html(lang='en')
             li._nav-item
               a(href='#_features') Features
             li._nav-item
-              a(href='#_contact') Contact
+              a(href='#_documentation') Documentation
             li._nav-item
-              a(href=`https://docs.${textCase.lowerCase(_PROJECT)}.org`) Docs
+              a(href='#_contact') Contact
           div._nav-buttons
             button#_theme_switch_button(type='button')
               i#_dark_theme_icon(class='inline fas fa-moon')
@@ -141,6 +141,18 @@ html(lang='en')
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Features
         div(class='flex flex-wrap sm:mt-5')
           each item, index in _BODY.features
+            div._feature-container(class=(index % 2) ? "wow fadeInRight" : "wow fadeInLeft" data-wow-delay="0.4s")
+              i(class=item.icon)
+              h3!= md(item.title)
+              p!= md(item.description)
+
+    //- Documentation section
+
+    section#_documentation._bg-alternate._border
+      div._section-inner
+        h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Documentation
+        div(class='flex flex-wrap sm:mt-5')
+          each item, index in _BODY.documentation
             div._feature-container(class=(index % 2) ? "wow fadeInRight" : "wow fadeInLeft" data-wow-delay="0.4s")
               i(class=item.icon)
               h3!= md(item.title)
