--- a/src/index.pug
+++ b/src/index.pug
@@ -66,7 +66,7 @@ html(lang='en')
             li._nav-item
               a(href='#_features') Features
             li._nav-item
-              a(href='#_documentation') Documentation
+              a(href='#_docs') Docs
             li._nav-item
               a(href='#_contact') Contact
           div._nav-buttons
@@ -148,7 +148,7 @@ html(lang='en')
 
     //- Documentation section
 
-    section#_documentation._bg-alternate._border
+    section#_docs._bg-alternate._border
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Documentation
         div(class='flex flex-wrap sm:mt-5')
