Fix background color

--- a/src/index.pug
+++ b/src/index.pug
@@ -148,7 +148,7 @@ html(lang='en')
 
     //- Documentation section
 
-    section#_docs._bg-alternate._border
+    section#_docs._border
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Documentation
         div(class='flex flex-wrap sm:mt-5')
@@ -160,7 +160,7 @@ html(lang='en')
 
     //- Contact section
 
-    section#_contact
+    section#_contact._bg-alternate
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Get in touch
         //- Main part
@@ -193,7 +193,7 @@ html(lang='en')
 
     //- Footer section
 
-    section
+    section._bg-alternate
       div(class='relative z-10 max-w-screen-lg xl:max-w-screen-xl mx-auto')
         div._footer-hline
         footer
