Remove '_' from section names

--- a/src/index.pug
+++ b/src/index.pug
@@ -62,13 +62,13 @@ html(lang='en')
         div
           ul._nav-items
             li._nav-item
-              a(href='#_hero-section') Home
+              a(href='#hero-section') Home
             li._nav-item
-              a(href='#_features') Features
+              a(href='#features') Features
             li._nav-item
-              a(href='#_docs') Docs
+              a(href='#docs') Docs
             li._nav-item
-              a(href='#_contact') Contact
+              a(href='#contact') Contact
           div._nav-buttons
             button#_theme_switch_button(type='button')
               i#_dark_theme_icon(class='inline fas fa-moon')
@@ -76,7 +76,7 @@ html(lang='en')
 
     //- Hero area
 
-    section#_hero-section._border
+    section#hero-section._border
       div._section-inner
         h1._hero-title.wow.fadeInUp(data-wow-delay="0.3s")!= md(_BODY.hero.title)
         p._hero-description.wow.fadeInUp(data-wow-delay="0.4s")!= md(_BODY.hero.description)
@@ -136,7 +136,7 @@ html(lang='en')
 
     //- Features section #[span(class='fas fa-arrow-right')]
 
-    section#_features._bg-alternate._border
+    section#features._bg-alternate._border
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Features
         div(class='flex flex-wrap sm:mt-5')
@@ -148,7 +148,7 @@ html(lang='en')
 
     //- Documentation section
 
-    section#_docs._border
+    section#docs._border
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Documentation
         div(class='flex flex-wrap sm:mt-5')
@@ -160,7 +160,7 @@ html(lang='en')
 
     //- Contact section
 
-    section#_contact._bg-alternate
+    section#contact._bg-alternate
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Get in touch
         //- Main part
