--- a/src/index.pug
+++ b/src/index.pug
@@ -94,7 +94,7 @@ html(lang='en')
                   div(class='text-3xl -mt-2 font-bold')= item.os
         if _BODY.hero.source
           div._hero-version.wow.fadeInUp(data-wow-delay="0.6s")
-            p!= md(`You can also [build it from source](${_BODY.hero.source})`)
+            p!= md(`You can also [build it from source](${_BODY.hero.source}).`)
         if _BODY.hero.poster
           div._hero-image-container
             div.wow.fadeInLeft(class='absolute left-0 right-0 hidden md:block h-5/6 -mx-6 bg-gray-200 dark:bg-gray-600 rounded-3xl shadow-lg' data-wow-delay="1.1s")
