--- a/src/index.pug
+++ b/src/index.pug
@@ -57,7 +57,7 @@ html(lang='en')
     header#_header
       nav
         a._nav-logo-container(href='#')
-          img(class='inline-block h-8 sm:h-9 -mt-1' src='assets/img/logo.svg' alt='')
+          img(class='inline-block h-8 sm:h-9 -mt-1' src='assets/img/logomark.svg' alt='')
           span(class='ml-2')!= md(`easy**${textCase.lowerCase(_PROJECT).replace('easy', '')}**`)
         div
           ul._nav-items
@@ -223,7 +223,7 @@ html(lang='en')
 
     div#_loading-screen.block
       span(class='relative top-1/2 mx-auto flex items-center justify-center')
-        img(class='h-20 w-20 animate-bounce' src='assets/img/logo.svg' alt='')
+        img(class='h-20 w-20 animate-bounce' src='assets/img/logomark.svg' alt='')
 
     //- Scripts
 
