--- a/src/index.pug
+++ b/src/index.pug
@@ -90,8 +90,8 @@ html(lang='en')
               a._hero-download-button(href=replaceall('$RELEASE_VERSION', _BODY.hero.release.version, item.url))
                 i(class='text-3xl' class=item.icon)
                 div(class='align-middle text-left')
-                  div(class='text-lg') Download for
-                  div(class='text-3xl -mt-2 font-bold')= item.os
+                  div(class='text-lg')= item.top
+                  div(class='text-3xl -mt-2 font-bold')= item.bottom
         if _BODY.hero.source
           div._hero-version.wow.fadeInUp(data-wow-delay="0.6s")
             p!= md(`You can also [build it from source](${_BODY.hero.source}).`)
