--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,6 @@
 
 - const md = function(s) { return marked(s).replace(/(^<p>|<\/p>$)/mg, '').trim() }
 
-
 doctype html
 
 html(lang='en')
@@ -65,8 +64,9 @@ html(lang='en')
               a(href='#hero-section') Home
             li._nav-item
               a(href='#features') Features
-            li._nav-item
-              a(href='#docs') Docs
+            if _BODY.documentation
+              li._nav-item
+                a(href='#docs') Docs
             li._nav-item
               a(href='#contact') Contact
           div._nav-buttons
