--- a/src/index.pug
+++ b/src/index.pug
@@ -62,6 +62,9 @@ html(lang='en')
           ul._nav-items
             li._nav-item
               a(href='#hero-section') Home
+            if _BODY.main_features
+              li._nav-item
+                a(href='#projects') Projects
             li._nav-item
               a(href='#features') Features
             if _BODY.documentation
@@ -112,7 +115,7 @@ html(lang='en')
     //- Main features section
     
     if _BODY.main_features
-      section._border
+      section#projects._bg-alternate._border
         div._section-inner
           h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Projects
           each item, index in _BODY.main_features
