--- a/src/index.pug
+++ b/src/index.pug
@@ -145,6 +145,14 @@ html(lang='en')
 
     if _BODY.main_features
       section#features._bg-alternate._border
+        div._section-inner
+          h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Features
+          div(class='flex flex-wrap sm:mt-5')
+            each item, index in _BODY.features
+              div._feature-container(class=(index % 2) ? "wow fadeInRight" : "wow fadeInLeft" data-wow-delay="0.4s")
+                i(class=item.icon)
+                h3!= md(item.title)
+                p!= md(item.description)
     else
       section#features._border
         div._section-inner
