--- a/src/index.pug
+++ b/src/index.pug
@@ -95,6 +95,9 @@ html(lang='en')
                 div(class='align-middle text-left')
                   div(class='text-lg')= item.top
                   div(class='text-3xl -mt-2 font-bold')= item.bottom
+                  if item.details
+                    div(class='text-sm -mt-1 opacity-25')= item.details
+
         if _BODY.hero.source
           div._hero-version.wow.fadeInUp(data-wow-delay="0.6s")
             p!= md(`You can also [build it from source](${_BODY.hero.source}).`)
@@ -113,7 +116,7 @@ html(lang='en')
                 i(class='ml-2 fas fa-play')
 
     //- Main features section
-    
+
     if _BODY.main_features
       section#projects._bg-alternate._border
         div._section-inner
