--- a/src/css/tailwind/tailwind.css
+++ b/src/css/tailwind/tailwind.css
@@ -131,18 +131,6 @@ nav {
   @apply max-w-screen-lg text-lg sm:text-2xl sm:leading-10 font-medium mt-4 text-gray-500 dark:text-gray-400;
 }
 
-._hero-version {
-  @apply text-lg sm:text-2xl text-left text-gray-500 dark:text-gray-400 mt-2 sm:mt-4 md:mt-6 lg:mt-8;
-}
-
-._hero-download-buttons {
-  @apply flex flex-wrap gap-4 mt-5 md:mt-8 xl:mt-10;
-}
-
-._hero-download-button {
-  @apply w-full md:w-64 xl:w-80 bg-gray-200 dark:bg-gray-900 text-gray-900 dark:text-white hover:text-blue-600 dark:hover:text-blue-400 leading-6 py-2 sm:px-6 border border-gray-300 dark:border-black rounded-xl flex items-center justify-center space-x-3 focus:outline-none transition-colors duration-500;
-}
-
 ._hero-image-container {
   @apply relative mt-8 md:mt-9 lg:mt-10 xl:mt-12 flex items-center justify-center;
 }
@@ -194,6 +182,29 @@ nav {
 ._feature-container p {
   @apply leading-8 mt-3 text-gray-600 dark:text-gray-400 text-xl;
 }
+
+/* Downloads section */
+
+._release-version {
+  @apply text-lg sm:text-2xl text-left text-gray-500 dark:text-gray-400 sm:mt-5;
+}
+
+._download-section {
+  @apply flex flex-wrap sm:mt-5;
+}
+
+._download-item-container {
+  @apply w-full sm:w-1/2 md:w-1/2 lg:w-1/2 mt-12 pr-12;
+}
+
+._download-item-container p {
+  @apply leading-8 mt-3 text-gray-600 dark:text-gray-400 text-xl;
+}
+
+._download-button {
+  @apply w-full md:w-80 xl:w-96 bg-gray-200 dark:bg-gray-900 text-gray-900 dark:text-white hover:text-blue-600 dark:hover:text-blue-400 leading-6 py-2 sm:px-6 border border-gray-300 dark:border-black rounded-xl flex items-center justify-center space-x-3 focus:outline-none transition-colors duration-500;
+}
+
 
 /* Contact section */
 
