--- a/src/index.pug
+++ b/src/index.pug
@@ -173,7 +173,9 @@ html(lang='en')
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Download
         div._release-version.wow.fadeInUp(data-wow-delay="0.4s")
-          p= `Version ${_RELEASE.release.version} (${dateFormat(_RELEASE.release.date, "d mmm yyyy")})`
+          div
+            i(class='fa-solid fa-rocket')
+            p(class='inline')= ` Latest release: v${_RELEASE.release.version} (${dateFormat(_RELEASE.release.date, "d mmm yyyy")})`
         div._download-section.wow.fadeInUp(data-wow-delay="0.5s")
           each item, index in _BODY.download
             div._download-item-container(class=(index % 2) ? "wow fadeInRight" : "wow fadeInLeft" data-wow-delay="0.6s")
