--- a/src/css/tailwind/tailwind.css
+++ b/src/css/tailwind/tailwind.css
@@ -53,6 +53,10 @@ section._border {
   @apply text-left text-gray-800 dark:text-gray-100 text-3xl sm:text-5xl font-bold;
 }
 
+._section-sub-title {
+  @apply text-left text-gray-800 dark:text-gray-100 text-2xl sm:text-4xl mt-8 xl:mt-10 font-bold;
+}
+
 a {
   @apply text-blue-600 hover:text-blue-400 dark:text-blue-400 dark:hover:text-blue-600 transition-colors duration-500;
 }
@@ -203,6 +207,10 @@ nav {
 
 ._download-button {
   @apply w-full md:w-80 xl:w-96 bg-gray-200 dark:bg-gray-900 text-gray-900 dark:text-white hover:text-blue-600 dark:hover:text-blue-400 leading-6 py-2 sm:px-6 border border-gray-300 dark:border-black rounded-xl flex items-center justify-center space-x-3 focus:outline-none transition-colors duration-500;
+}
+
+._install_cmd {
+  @apply w-min font-light bg-gray-200 dark:bg-gray-900 text-gray-600 dark:text-gray-300 text-xl border border-gray-300 dark:border-black mt-10 py-4 px-8 transition-colors duration-500;
 }
 
 /* Contact section */
