--- a/src/index.pug
+++ b/src/index.pug
@@ -172,19 +172,28 @@ html(lang='en')
     section#download._bg-alternate._border
       div._section-inner
         h2._section-title.wow.fadeInUp(data-wow-delay="0.3s") Download
+        h3._section-sub-title.wow.fadeInUp(data-wow-delay="0.4s") Desktop application
         div._release-version.wow.fadeInUp(data-wow-delay="0.4s")
           div
             i(class='fa-solid fa-rocket')
-            p(class='inline')= ` Latest release: v${_RELEASE.release.version} (${dateFormat(_RELEASE.release.date, "d mmm yyyy")})`
+            p(class='inline')= ` Latest release: v${_RELEASE.release.app.version} (${dateFormat(_RELEASE.release.app.date, "d mmm yyyy")})`
         div._download-section.wow.fadeInUp(data-wow-delay="0.5s")
           each item, index in _BODY.download
             div._download-item-container(class=(index % 2) ? "wow fadeInRight" : "wow fadeInLeft" data-wow-delay="0.6s")
               p!= md(item.details)
-              a._download-button(href=replaceall('$RELEASE_VERSION', _RELEASE.release.version, item.url))
+              a._download-button(href=replaceall('$RELEASE_VERSION', _RELEASE.release.app.version, item.url))
                 i(class='text-3xl' class=item.icon)
                 div(class='align-middle text-left')
                   div(class='text-lg')= item.top
                   div(class='text-3xl -mt-2 font-bold')= item.bottom
+        if _BODY.install.pip
+          p &nbsp;
+          h3._section-sub-title.wow.fadeInUp(data-wow-delay="0.6s") Python package
+          div._release-version.wow.fadeInUp(data-wow-delay="0.6s")
+            div
+              i(class='fa-solid fa-rocket')
+              p(class='inline')= ` Latest release: v${_RELEASE.release.lib.version} (${dateFormat(_RELEASE.release.lib.date, "d mmm yyyy")})`
+              pre._install_cmd= `$ ${_BODY.install.pip}`
 
     //- Contact section
 
