--- a/src/index.pug
+++ b/src/index.pug
@@ -57,8 +57,8 @@ html(lang='en')
     header#_header
       nav
         a._nav-logo-container(href='#')
-          img(class='inline-block h-8 sm:h-9 -mt-1' src='assets/img/logomark.svg' alt='')
-          span(class='ml-2')!= md(`easy**${textCase.lowerCase(_PROJECT).replace('easy', '')}**`)
+          img#_light_theme_logo(class='inline-block h-8 sm:h-9 -mt-1' src='https://raw.githubusercontent.com/EasyScience/BrandingResources/refs/heads/master/EasyDiffraction/logos/ed-logo-2_light.svg', alt='')
+          img#_dark_theme_logo(class='inline-block h-8 sm:h-9 -mt-1' src='https://raw.githubusercontent.com/EasyScience/BrandingResources/refs/heads/master/EasyDiffraction/logos/ed-logo-2_dark.svg', alt='')
         div
           ul._nav-items
             li._nav-item
